/*
 * Copyright (C) 2015 Red Bull Media House GmbH <http://www.redbullmediahouse.com> - all rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// ------------------------------------------------------------------------
//  Run 'build.proto' from the project's root directory for compilation
// ------------------------------------------------------------------------

option java_package = "com.rbmhtechnology.eventuate";
option optimize_for = SPEED;

message DurableEventMessage {
  optional PayloadMessage payload = 1;
  optional int64 systemTimestamp = 2;
  optional VectorTimeMessage vectorTimestamp = 3;
  optional string emitterReplicaId = 4;
  optional string emitterAggregateId = 5;
  repeated string customRoutingDestinations = 6;
  optional string sourceLogId = 7;
  optional string targetLogId = 8;
  optional int64 sourceLogSequenceNr = 9;
  optional int64 targetLogSequenceNr = 10;
}

message PayloadMessage {
  optional int32 serializerId = 1;
  optional bytes payload = 2;
  optional bytes payloadManifest = 3;
}

message VectorTimeEntryMessage {
  required string processId = 1;
  required int64 logicalTime = 2;
}

message VectorTimeMessage {
  repeated VectorTimeEntryMessage entries = 1;
}